@startuml ConnectFourConsoleApp
title Connect-4 ConsoleApp
namespace Models{
    class ConnectFour{
        ~ConnectFour()
        ~Run()
        -Start()
        -Play()
        -Resume()
    }
    ConnectFour *--> "1" Board
    ConnectFour *--> "1" Turn
    ConnectFour ..> Types.Message
    ConnectFour ..> ConsoleIOS.YesNotDialog

    class Board{
        ~Board()
        ~Reset()
        ~Drop(colunm, Token)
        -GetLastDrop(colunm) : Token
        -IsEmpty(Coordinate) : bool
        -IsOccupied(Coordinate, Token) : bool
        -GetToken(Coordinate) : Token
        ~IsComplete(colunm) : bool
        ~IsFinished() : bool
        -IsComplete() : bool
        ~IsWinner() : bool
        -IsConnect4(Line) : bool
        ~Write()
        -WriteHorizontalLine()
    }
    Board *--> "6x7" Types.Token
    Board --> Types.Coordinate
    Board ..> Types.Line
    Board ..> Types.Message
    Board ..> ConsoleIOS.ConsoleIO

    class Turn{
        -{static}NUMBER_OF_PLAYERS : int
        -current : int
        ~Turn(Board)
        ~Reset()
        ~Play()
        ~WriteResults()
    }
    Turn *--> "2" Player
    Turn --> Board
    Turn ..> Types.Token
    Turn ..> ConsoleIOS.ConsoleIO

    class Player{
        ~Player(Token, Board)
        ~Play()
        ~WriteWinner()
    }
    Player --> Types.Token
    Player --> Board
    Player ..> Types.Message
    Player ..> Types.Coordinate
    Player ..> ConsoleIOS.ConsoleIO
}
@enduml